--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,7 +11,8 @@ author_profile: true
 
 {% include base_path %}
 
-'Hello'
+2. Zero modes of the Kitaev chain with phase-gradients and longer range couplings, [arXiv](https://arxiv.org/abs/1709.00959), [J. Phys. Commun. (2018)](https://iopscience.iop.org/article/10.1088/2399-6528/aab7e5)
+1. Localized magnetic states in three dimensional Dirac solids, [arXiv](https://arxiv.org/abs/1503.06355), [J. Phys. Soc. Jpn.(2016)](https://journals.jps.jp/doi/10.7566/JPSJ.85.014707)
 
 <!-- New style rendering if publication categories are defined -->
 <!-- {% if site.publication_category %}
