--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "Blog posts"
+title: "Notes"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
-
+Hello. These are some notes for myself, 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
