--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,7 +6,7 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
-Hello. These are some notes for myself, 
+These are some notes for myself. So I can study them later on. 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
