--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,7 +6,10 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
-These are some notes for myself. So I can study them later on. 
+Here I write some notes for myself. You could also call them blog posts. 
+The main purpose is to collect what I learn or what I think could be useful in the future, so I can come back read my own notes. 
+I will try to put relevant refecences as well. 
+ 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
