--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,9 +6,11 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
-Here I write some notes for myself. You could also call them blog posts. 
-The main purpose is to collect what I learn or what I think could be useful in the future, so I can come back read my own notes. 
-I will try to put relevant refecences as well. 
+Here, I write some notes for myself. You could also call them blog posts. The main purpose is to collect what I learn or what I think could be useful, so I can come back and read them. 
+
+These note are not necessary pedagogical, but I will try to put sufficiently enough material to be able to understand it in the distant future. 
+I will try to put relevant refecences, since I guess many (or even most) of these notes will written based on a piece from a book or a paper.
+
  
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
